# resume-agent

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  TROUBLESHOOTING.md  list_models.py  pyproject.toml  resume_template.md  run_agent.sh  setup.sh  stream_debug_log.json  test_gemini_api.py  test_gemini_curl.sh  test_precommit.py  test_stream_debug.py  test_stream_raw.py
.claude/: CLAUDE.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: README.md  __init__.py
apps/cli/: README.md  __init__.py  pyproject.toml
apps/cli/resume_agent_cli/: app.py  config_validator.py  tool_factory.py
apps/cli/tests/: test_cli_completer_and_sessions.py  test_config_validator.py  test_export_verbose.py  test_html_templates.py
apps/web/: README.md  __init__.py
config/: README.md  config.yaml
docs/: README.learn.md  README.md  architecture.md  environment-setup.md  export-verbose-example.md  getting-started.md  how-to-run.md  quality-score.md  quick-start.md  session-persistence.md  session-quickstart.md  session-troubleshooting.md  session-ui-improvements.md  troubleshooting.md
docs/api-reference/: linkedin-tools.md  phase1-quick-reference.md  sse-events-v1.md  web-api-v1.md
docs/architecture/: cli-stream-display.md  execution-data-flow.md  monorepo-ownership-map.md  phase1-improvements.md  run-state-machine.md
docs/archive/: README.md  agent-loop-approval-refactor-2026-03-09.md  phase1-improvements.md
docs/evals/: job_match_behavior.md
docs/learn/: agent-stream-display-reference.md  event-loop-async-patterns.md  kimi-cli-history-design-reference.md  pi-mono-history-design-reference.md  sse-websocket-streaming.md  vercel-ai-sdk-streaming.md
docs/maintenance/: harness-improvements-summary.md  recurring-cleanup.md
docs/ops/: branch-protection.md  quality-scorecard.md  release-gates.md  web-observability-loadtest.md
docs/plans/: product-direction-ideas.md  sse-optimization-roadmap.md  web-phase1-acceptance.md  web-productization-implementation-checklist.md  web-productization-roadmap-v2.md
docs/product/: productization-checklist.md
docs/research/: linkedin-browser-poc.md
docs/sessions/: session-persistence.md
docs/setup/: environment-setup.md
docs/standards/: documentation-organization.md
docs/todo/: history-management-roadmap.md
docs/usage/: export-history.md  export-verbose-example.md
examples/my_resume/: frontend-resume-improved.md
examples/sample_resumes/: sample_resume.md
output/: test_resume.html  test_resume.json
poc/: INTEGRATION.md  README.md  linkedin_browser_poc.py  linkedin_browser_poc.ts  linkedin_vercel_agent.js  package.json  requirements.txt  test_connection.py
resume_agent/: __init__.py  agent.py  agent_factory.py  cache.py  cli.py  config_validator.py  llm.py  llm_openai.py  observability.py  preview.py  retry.py  session.py
resume_agent/agents/: __init__.py  agent_tool.py  base.py  context.py  delegation.py  formatter_agent.py  history.py  orchestrator_agent.py  parser_agent.py  protocol.py  registry.py  writer_agent.py
resume_agent/cli/: __init__.py  app.py  config_validator.py  stream_display.py  tool_factory.py
resume_agent/contracts/: __init__.py
resume_agent/core/: __init__.py  agent.py  agent_factory.py  cache.py  llm.py  observability.py  preview.py  session.py
resume_agent/domain/: __init__.py  ats_scorer.py  job_matcher.py  linkedin_jobs.py  resume_linter.py  resume_validator.py  resume_writer.py  semantic_similarity.py
resume_agent/providers/: __init__.py  base.py  gemini.py  model_registry.py  openai_compat.py  types.py
resume_agent/skills/: parser_prompt.py  resume_expert.py
resume_agent/templates/: __init__.py  classic.css  minimal.css
resume_agent/tools/: __init__.py  ats_scorer.py  base.py  bash_tool.py  cdp_client.py  chrome_profile.py  file_tool.py  job_matcher.py  linkedin_tools.py  patchright_client.py  resume_parser.py  resume_tools.py  resume_validator.py  resume_writer.py  web_tool.py
resume_agent/web/: __init__.py  app.py  artifact_storage.py  errors.py  store.py  workspace.py
scripts/: cdp.ts  eval_job_match.py  launch-linkedin-search.ts  linkedin_agent_browser.py  linkedin_browser_agent.py  linkedin_jobs_poc.py  loadtest_web_api.py  release_gates.sh  scroll-linkedin.ts
tasks/: todo.md
tests/: conftest.py  test_api_app_compatibility.py  test_architecture_boundaries.py  test_ats_scorer.py  test_ci_guardrails.py  test_cli_command_parsing.py  test_cli_compatibility.py  test_cli_stream_command.py  test_config_validator.py  test_contracts_compatibility.py  test_core_compatibility.py  test_e2e_pipeline.py  test_export_verbose.py  test_function_call_pairing.py  test_html_templates.py  test_job_matcher.py  test_llm_tool_registry.py  test_multi_agent_core.py  test_packaging_guardrails.py  test_phase1_improvements.py  test_preview.py  test_provider_normalization.py  test_providers_compatibility.py  test_resume_validator.py  test_session_integration.py  test_session_persistence.py  test_shim_retirement_guardrails.py  test_sqlite_store.py  test_web_api_audit_redaction.py  test_web_api_persistence.py  test_web_api_real_mode.py  test_web_api_week1.py  test_web_ui_compatibility.py
tests/architecture/: test_architecture_boundaries.py  test_ci_guardrails.py  test_loop_tool_boundary_guardrails.py  test_packaging_guardrails.py  test_shim_retirement_guardrails.py
tests/behavior/: test_history_compaction_behavior.py  test_job_match_behavior.py
tests/cli/: test_cli_command_parsing.py  test_cli_completer_and_sessions.py  test_cli_stream_command.py  test_cli_stream_display.py  test_config_validator.py  test_export_verbose.py  test_html_templates.py
tests/core/: test_function_call_pairing.py  test_llm_compaction.py  test_llm_context_budget.py  test_llm_stream_resilience.py  test_llm_tool_policy.py  test_llm_tool_registry.py  test_multi_agent_core.py  test_phase1_improvements.py  test_preview.py  test_provider_normalization.py  test_retry_and_cache.py  test_retry_backoff.py  test_session_integration.py  (+2 more)
(+83 files in other folders)
