[project]
name = "resume-agent"
version = "0.1.0"
description = "An AI-powered resume modification agent built on MiniMax Mini-Agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "resume-agent-domain>=0.1.0",
    "resume-agent-providers>=0.1.0",
    "resume-agent-core>=0.1.0",
    "resume-agent-tools-cli>=0.1.0",
    "resume-agent-cli>=0.1.0",
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.2.1",
    "pyperclip>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
resume-agent = "apps.cli.resume_agent_cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps", "packages"]

[tool.uv.workspace]
members = [
    "packages/domain",
    "packages/core",
    "packages/providers",
    "packages/tools/cli",
    "apps/cli",
]

[tool.uv.sources]
resume-agent-domain = { workspace = true }
resume-agent-core = { workspace = true }
resume-agent-providers = { workspace = true }
resume-agent-tools-cli = { workspace = true }
resume-agent-cli = { workspace = true }

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".venv", "__pycache__", "workspace"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["packages", "apps", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.10"
files = [
    "apps/cli/resume_agent_cli/config_validator.py",
    "packages/providers/resume_agent_providers",
]
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
