[project]
name = "resume-agent"
version = "0.1.0"
description = "An AI-powered resume modification agent built on MiniMax Mini-Agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyyaml>=6.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.2.1",
    "pyperclip>=1.11.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
pdf = ["pymupdf>=1.24.0"]
docx = ["python-docx>=1.1.0"]
html = ["markdown>=3.5.0"]
browser = ["patchright>=1.40.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.11.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
resume-agent = "resume_agent.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resume_agent"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [".venv", "__pycache__", "workspace"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.10"
files = [
    "resume_agent/cli/config_validator.py",
    "resume_agent/providers",
]
ignore_missing_imports = true
follow_imports = "silent"
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
