[project]
name = "resume-agent-cli"
version = "0.1.0"
description = "CLI application for resume-agent"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "resume-agent-core>=0.1.0",
    "resume-agent-tools-cli>=0.1.0",
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.2.1",
    "pyperclip>=1.11.0",
]

[project.scripts]
resume-agent = "resume_agent_cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resume_agent_cli"]
